--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
     "react-type-animation": "^3.2.0",
     "three": "^0.181.2"
