--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@tabler/icons-react": "^3.35.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.561.0",
+    "motion": "^12.23.26",
     "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
